<resources>
    <string name="app_name">Your System</string>
    <string name="logo">Your System</string>

    <string name="greetings">Welcome to the application "your system".
        This application is designed to improve and organize your life.</string>
    <string name="butt_start">start</string>

    <string name="butt_offline_mode">Offline</string>
    <string name="infoAboutOffline">All your data will be only in your device</string>
    <string name="butt_online_mode">Online</string>
    <string name="infoAboutOnline">All your data will be stored on our server and will be available
        from any device (not working yet)</string>

    <string name="notes">Notes</string>
    <string name="timetable">Timetable</string>
    <string name="progress">Progress</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>

    <string name="mn">Mn</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="DateAndDayOfWeek">Hello! Today is …</string>
    <string name="listOfLesson">Lesson 1\nLesson 2\nLesson 3\nLesson 4\nLesson 5\nLesson 6\nLesson 7\n</string>
    <string name="back">Back</string>

    <string name="plus">+</string>

    <string name="add">Add</string>
    <string name="ed_title_hint">Enter note text</string>

    <string name="language">Language</string>
    <string name="working_mode">Working mode</string>
    <string name="dark_light_mode">Dark Light mode</string>
    <string name="info">Info</string>
    <string name="tetris">Tetris</string>

    <string name="information">Information about developers</string>

    <string name="place_for_map_api">place for map(API)</string>

    <string name="russian">Russian</string>
    <string name="english">English</string>

    <string name="high_score_default">High score: 0</string>
    <string name="new_game">New game</string>
    <string name="reset_score">Reset score</string>
    <string name="exit">Exit</string>

</resources>