<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timetable">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/mn"
            android:textAlignment="viewStart"
            android:textColor="#F6EEEE"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btnTu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10dp"
            android:text="@string/tu"
            android:textAlignment="viewStart"
            android:textColor="#F6EEEE"
            android:textSize="11sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnWe"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10dp"
            android:text="@string/we"
            android:textAlignment="viewStart"
            android:textColor="#F6EEEE"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btnTh"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10dp"
            android:text="@string/th"
            android:textAlignment="viewStart"
            android:textColor="#F6EEEE"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btnFr"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10dp"
            android:text="@string/fr"
            android:textAlignment="viewStart"
            android:textColor="#F6EEEE"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btnSa"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10dp"
            android:text="@string/sa"
            android:textAlignment="viewStart"
            android:textColor="#F6EEEE"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btnSu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10dp"
            android:text="@string/su"
            android:textAlignment="viewStart"
            android:textColor="#F6EEEE"
            android:textSize="11sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>