<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="90sp"
        android:layout_height="50sp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60sp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnLanguage"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="150sp"
            android:layout_marginTop="10dp"
            android:text="@string/language"
            android:textSize="40sp"
            android:textColor="#F6EEEE" />

        <Button
            android:id="@+id/btnWorkingMode"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="150sp"
            android:layout_marginTop="10dp"
            android:text="@string/working_mode"
            android:textSize="40sp"
            android:textColor="#F6EEEE" />

        <Button
            android:id="@+id/btnDarkLightMode"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="150sp"
            android:layout_marginTop="10dp"
            android:text="@string/dark_light_mode"
            android:textSize="40sp"
            android:textColor="#F6EEEE" />

        <Button
            android:id="@+id/btnInfo"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="150sp"
            android:layout_marginTop="10dp"
            android:text="@string/info"
            android:textSize="40sp"
            android:textColor="#F6EEEE" />

        <Button
            android:id="@+id/btnTetris"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="150sp"
            android:layout_marginTop="10dp"
            android:text="@string/tetris"
            android:textSize="40sp"
            android:textColor="#F6EEEE" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>