<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Language">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="90sp"
        android:layout_height="50sp"
        android:text="@string/back"
        android:textSize="18sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnRussian"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="150sp"
            android:layout_marginTop="30dp"
            android:text="@string/russian"
            android:textColor="#F6EEEE"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnEnglish"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="150sp"
            android:layout_marginTop="10dp"
            android:text="@string/english"
            android:textColor="#F6EEEE"
            android:textSize="40sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>