<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModeSelection">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50sp"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:id="@+id/offline_mode"
        android:layout_width="264dp"
        android:layout_height="122dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="150sp"
        android:layout_marginStart="70sp"
        android:layout_marginTop="100sp"
        android:layout_marginEnd="70sp"
        android:text="@string/butt_offline_mode"
        android:textColor="#050505"
        tools:layout_editor_absoluteX="157sp"
        tools:layout_editor_absoluteY="526sp" />

    <Button
        android:id="@+id/online_mode"
        android:layout_width="276dp"
        android:layout_height="117dp"
        android:layout_below="@+id/offline_mode"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="150sp"
        android:layout_marginStart="70sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="70sp"
        android:text="@string/butt_online_mode"
        android:textColor="#050505"
        tools:layout_editor_absoluteX="157sp"
        tools:layout_editor_absoluteY="526sp" />

</RelativeLayout>